--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
   },
   "dependencies": {
     "@stitches/react": "^1.2.8",
-    "next": "12.3.1",
-    "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "keen-slider": "^6.8.5",
+    "next": "^13.1.1",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "stripe": "^11.5.0"
   },
   "devDependencies": {
     "@rocketseat/eslint-config": "^1.1.3",
@@ -20,7 +22,7 @@
     "@types/react": "18.0.21",
     "@types/react-dom": "18.0.6",
     "eslint": "8.25.0",
-    "eslint-config-next": "12.3.1",
+    "eslint-config-next": "^13.1.1",
     "typescript": "4.8.4"
   }
 }
